--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   },
   "devDependencies": {
     "@paulavery/docs": "^1.0.0",
+    "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.2",
     "babel-plugin-transform-async-to-generator": "^6.7.4",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.8.0",
-    "mocha": "^2.4.5",
-    "must": "^0.13.1",
     "static-server": "^2.0.2"
   },
   "dependencies": {
