--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
     "eslint": "^2.8.0",
+    "nyc": "^6.4.0",
     "static-server": "^2.0.2"
   },
   "dependencies": {
