--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
 		"curly": [2, "multi-line"],
 		"dot-notation": [2, { "allowKeywords": true }],
 		"eol-last": 2,
-		"indent": [2, "tab"],
+		"indent": [2, "tab", {"SwitchCase": 1}],
 		"no-extra-parens": [2, "functions"],
 		"eqeqeq": [2, "allow-null"],
 		"key-spacing": [2, { "beforeColon": false, "afterColon": true }],
