--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@paulavery/module-template",
+  "name": "@paulavery/youtube-archive",
   "version": "0.0.0",
-  "description": "A template for node modules",
-  "main": "lib/index.js",
+  "description": "Application to archive youtube videos and metadata",
+  "bin": "lib/index.js",
   "license": "BSD-3-Clause",
   "author": {
     "name": "Florian Albertz",
@@ -10,21 +10,56 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/PaulAvery/module-template.git"
+    "url": "https://github.com/PaulAvery/youtube-archive.git"
   },
   "devDependencies": {
-    "@paulavery/docs": "^2.1.0",
-    "ava": "^0.14.0",
     "babel-cli": "^6.7.5",
     "babel-eslint": "^6.0.2",
-    "babel-plugin-transform-async-to-generator": "^6.7.4",
-    "babel-plugin-transform-runtime": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.8.0",
-    "nyc": "^6.4.0",
-    "static-server": "^2.0.2"
+    "eslint": "^2.8.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1"
+    "@paulavery/app": "^2.0.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-async-to-generator": "^6.7.4",
+    "babel-plugin-transform-es2015-block-scoped-functions": "^6.8.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-plugin-transform-es2015-parameters": "^6.11.4",
+    "babel-plugin-transform-es2015-unicode-regex": "^6.11.0",
+    "babel-plugin-transform-exponentiation-operator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-runtime": "^6.6.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fluent-ffmpeg": "^2.1.0",
+    "fs-extra": "^0.30.0",
+    "googleapis": "^12.0.0",
+    "hogan.js": "^3.0.2",
+    "knex": "^0.11.9",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^3.1.0",
+    "koa-convert": "^1.2.0",
+    "koa-generic-session": "^1.11.3",
+    "koa-helmet": "^2.0.0",
+    "koa-route": "^3.1.0",
+    "koa-stream": "^0.2.0",
+    "longjohn": "^0.2.11",
+    "lzma-native": "^1.5.1",
+    "memory-fs": "^0.3.0",
+    "mt-downloader": "^1.5.3",
+    "node-sass": "^3.8.0",
+    "path-to-regexp": "^1.5.3",
+    "sass-loader": "^4.0.0",
+    "sqlite3": "^3.1.4",
+    "tar-fs": "^1.13.0",
+    "unzip": "^0.1.11",
+    "vue": "^2.0.0-beta.7",
+    "vue-loader": "^9.3.2",
+    "vue-router": "^2.0.0-rc.2",
+    "vue-server-renderer": "^2.0.0-beta.7",
+    "vuex": "^2.0.0-rc.5",
+    "webpack": "^1.13.1",
+    "ytdl-core": "^0.7.17",
+    "zeltice-mt-downloader": "^1.1.3"
   }
 }
